<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.stock.InputStockActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow"
        app:layout_constraintEnd_toStartOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cumabutton" />

    <TextView
        android:id="@+id/txt_inputstock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/cabinbold"
        android:text="@string/masukkan_barang"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_barang"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/img_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_inputstock"
        android:contentDescription="@string/cumabutton" />

    <TextView
        android:id="@+id/txt_fotobarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/cabinregular"
        android:text="@string/foto_barang"
        android:textColor="#747474"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_barang" />

    <EditText
        android:id="@+id/nama_barang"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabinregular"
        android:hint="@string/nama_barang"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_fotobarang"
        android:inputType="text" />

    <EditText
        android:id="@+id/kuantitas"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/cabinregular"
        android:hint="@string/kuantitas"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nama_barang"
        android:inputType="number" />

    <EditText
        android:id="@+id/desk_barang"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/cabinregular"
        android:hint="@string/deskripsi_barang"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kuantitas"
        android:inputType="text" />

    <EditText
        android:id="@+id/harga"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/cabinregular"
        android:hint="@string/harga"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desk_barang"
        android:inputType="number" />

    <Button
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/cabinbold"
        android:text="@string/masukkan_stok"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/harga" />


</androidx.constraintlayout.widget.ConstraintLayout>