<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.record.InputRecordActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_stuff"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/cumabg" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_stuff"
        android:layout_alignParentStart="true"
        android:rotation="180"
        android:layout_marginBottom="30dp"
        android:background="@android:color/transparent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/cumabg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cumaicon"
            android:src="@drawable/ic_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/cabinregular"
            android:text="@string/catat_pembelian"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabinregular"
                android:layout_marginBottom="10dp"
                android:hint="@string/nama_barang"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabinregular"
                android:hint="@string/kuantitas"
                android:importantForAutofill="no"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_home_item"
                android:elevation="10dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                tools:targetApi="lollipop">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_harga"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/cabinregular"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textSize="25sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_500000"
                    android:fontFamily="@font/cabinregular"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"
                    android:textSize="25sp"/>

            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorOrange"
            android:text="@string/simpan"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>