<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.register.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/regisbackground"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/cumabg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabinbold"
            android:text="@string/selamatbergabung"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nama_toko_regis"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabinregular"
            android:text="@string/nama_toko"
            android:textColor="#747474"
            android:textSize="20sp"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:inputType="text"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/nomor_regis"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/cabinregular"
            android:text="@string/no_telpon"
            android:textColor="#747474"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nama_toko_regis"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/password_regis"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/cabinregular"
            android:textColor="#747474"
            android:textSize="20sp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nomor_regis"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/txtSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:fontFamily="@font/cabinbold"
            android:text="SIGN UP"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_regis"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_regis_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            android:layout_marginBottom="170dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:contentDescription="@string/cumabutton" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabinbold"
            android:text="@string/login"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSignup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>