<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wp_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cumabg" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/nama_toko"
        android:textAlignment="center"
        android:fontFamily="@font/cabinregular"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/bg_home_item"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:targetApi="lollipop">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_input_record"
            android:contentDescription="@string/cumaicon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabinregular"
            android:gravity="center_horizontal"
            android:text="@string/beli"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="23sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/bg_home_item"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:targetApi="lollipop">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_log_record"
            android:contentDescription="@string/cumaicon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabinregular"
            android:gravity="center_horizontal"
            android:text="@string/riwayat"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="23sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/bg_home_item"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:targetApi="lollipop">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_input_stock"
            android:contentDescription="@string/cumaicon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabinregular"
            android:gravity="center_horizontal"
            android:text="@string/masukkan_stok"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="23sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/bg_home_item"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:targetApi="lollipop">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_stock"
            android:contentDescription="@string/cumaicon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabinregular"
            android:gravity="center_horizontal"
            android:text="@string/stok"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="23sp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/cabinbold"
        android:textColor="@android:color/white"
        android:background="@color/colorOrange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>