<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="11dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            tools:ignore="RtlSymmetry">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_19_02_2021"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/cabinregular"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabinregular"
                android:layout_marginVertical="5dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/kain_gaun_motif_bunga"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tanggal" />

            <TextView
                android:id="@+id/tv_kuantitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabinregular"
                android:layout_marginVertical="5dp"
                android:textColor="@android:color/black"
                android:text="@string/_3_meter_persegi"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_nama" />

            <TextView
                android:id="@+id/tv_harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabinregular"
                android:textColor="@android:color/black"
                android:layout_marginVertical="5dp"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                android:text="@string/rp_200_000"
                app:layout_constraintTop_toBottomOf="@+id/tv_kuantitas" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>